# StaticDjangoSite

./: manage.py  pyproject.toml
StaticDjangoSite/: asgi.py  settings.py  urls.py  wsgi.py
viewer/: views.py
